--- a/index.html
+++ b/index.html
@@ -45,17 +45,14 @@
         </div>
       </main>
       <footer>
-          This project was coded by
-          <a href="https://github.com/YolaMsk" target="_blank"
-            >Yolanda Masuku</a
-          >
-          and is
-          <a href="https://github.com/YolaMsk?tab=repositories" target="_blank">
-            on GitHub</a
-          >
-          and
-          <a href="#" target="_blank">hosted on Netlify</a>
-        </p>
+        This project was coded by
+        <a href="https://github.com/YolaMsk" target="_blank">Yolanda Masuku</a>
+        and is
+        <a href="https://github.com/YolaMsk?tab=repositories" target="_blank">
+          on GitHub</a
+        >
+        and
+        <a href="#" target="_blank">hosted on Netlify</a>
       </footer>
     </div>
   </body>
