--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="javascrip" href="src/index.js" />
-    <title>My weather application</title>
+    <title>My She-Codes-App</title>
   </head>
   <body>
     <div class="weather-app">
@@ -52,7 +52,9 @@
           on GitHub</a
         >
         and
-        <a href="#" target="_blank">hosted on Netlify</a>
+        <a href="https://candid-biscuit-c817ce.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
       </footer>
     </div>
   </body>
